--- a/src/insidefx/ibreed/page.html
+++ b/src/insidefx/ibreed/page.html
@@ -64,7 +64,7 @@
         </script>	
     </head>
     <body>
-        <p>#1 Dialogs</p>
+        <p>#1 Dialogs section</p>
         Examples of built-in dialogs handlers
         <div>
             <button type="button"  onclick="callPrompt();">Prompt</button>
@@ -72,7 +72,7 @@
             <button type="button"  onclick="callAlert();">Alert</button>
         </div>
         <br>
-        <p>#2 Native html5 drag and drop</p>
+        <p>#2 Native html5 drag and drop section</p>
         
         <br>
         <div id="divTarget" ondrop="drop(event);" ondragover="allowDrop(event);"></div>
