--- a/src/insidefx/ibreed/page.html
+++ b/src/insidefx/ibreed/page.html
@@ -131,7 +131,7 @@
         <h3>#3 JavaScript to Java</h3>
         <input size="60" onkeyup="sendToJava();" value="Write a character into this field!" />
         <h3>#4 Java to JavaScript</h3>
-        <input size="60" id="fromJava" value="" />
+        <input size="60" readonly id="fromJava" value="" />
 
     </body>
 </html>
