--- a/src/demoapp/page.html
+++ b/src/demoapp/page.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
+        <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">-->
         <style type="text/css">
             #dropTarget {width:80%;height:80%;min-height:50px;margin: 0px;padding:10px;border:1px dashed #aaaaaa;}
 
