--- a/src/demoapp/pageOpen.html
+++ b/src/demoapp/pageOpen.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
+        <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">-->
         <style type="text/css">
 
             /* No text selection allowed in this hybrid application*/
